--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -147,6 +147,34 @@
     padding: 25px;
     margin: 0 15px 0 0;
   }
+  .blog-section {
+    .heading {
+      h4 {
+        font-size: 36px;
+      }
+    }
+    .blog-imgholder {
+      @include square(90px);
+    }
+    .blog-imginfo {
+      min-height: auto;
+      padding: 20px 20px 30px 5px;
+      p {
+        font-size: 19px;
+      }
+    }
+  }
+  .askqts {
+    margin: 0 0 0 15px;
+    .tips {
+      letter-spacing: 0;
+    }
+    form {
+      textarea {
+        min-height: 190px;
+      }
+    }
+  }
 }
 @media (max-width: $screen-sm-max) {
   // faq
@@ -339,6 +367,23 @@
       }
     }
   }
+  .home-slider {
+    .slider-info {
+      h2 {
+        margin: 0;
+        font-size: 25px;
+      }
+      p {
+        font-size: 15px;
+      }
+      button {
+        margin-top: 10px;
+      }
+    }
+    .flexslider .flex-direction-nav a {
+      zoom: 0.8;
+    }
+  }
   .health-heading {
     margin: 0 0 15px;
     font-size: 23px;
@@ -405,6 +450,38 @@
       .descp {
         width: 280px;
         margin: 10px auto;
+      }
+    }
+  }
+  .blog-main {
+    padding: 15px;
+  }
+  .blog-section {
+    .heading {
+      h4 {
+        font-size: 30px;
+      }
+    }
+    .blog-imgholder {
+      @include square(80px);
+    }
+    .blog-imginfo {
+      min-height: 80px;
+      padding: 0;
+      p {
+        font-size: 14px;
+        letter-spacing: 0;
+      }
+    }
+  }
+  .askqts {
+    margin: 0 0 0 15px;
+    .tips {
+      font-size: 14px;
+    }
+    form {
+      textarea {
+        min-height: 175px;
       }
     }
   }
@@ -668,6 +745,22 @@
       font-size: 45px;
     }
   }
+  .home-slider {
+    .slider-info {
+      h2 {
+        font-size: 22px;
+      }
+      p {
+        font-size: 14px;
+      }
+      button {
+        margin-top: 8px;
+      }
+    }
+    .flexslider .flex-direction-nav a {
+      zoom: 0.7;
+    }
+  }
   .health-heading {
     margin: 0 0 12px;
     font-size: 18px;
@@ -718,22 +811,35 @@
     width: 125px;
   }
   .section-story {
-    .slider {
-      .glyphicon-chevron-left:before {
-        color: $brand-brown-dark;
-        font-size: 50px;
+    padding: 30px 0;
+    .carousel-control {
+      .glyphicon-chevron-left,
+      .glyphicon-chevron-right {
+        top: 65%;
+        &:before {
+          color: $brand-brown-dark;
+          font-size: 50px;
+        }
       }
-      .glyphicon-chevron-right:before {
-        color: $brand-brown-dark;
-        font-size: 50px;
+      .glyphicon-chevron-left {
+        left: 25px;
       }
-      .carousel-control.left {
-        top: 60%;
-        left: 50px;
+      .glyphicon-chevron-right {
+        right: 25px;
       }
-      .carousel-control.right {
-        top: 60%;
-        right: 50px;
+    }
+    .view-detail {
+      .name {
+        font-size: 20px;
+      }
+      .weight-info {
+        top: 10px;
+      }
+      .descp {
+        &:before,
+        &:after {
+          @include square(20px);
+        }
       }
     }
   }
@@ -747,6 +853,50 @@
         min-height: auto;
         margin: 15px auto;
       }
+    }
+  }
+  .blog-section {
+    padding: 20px 0;
+    .blog-info .last-blog-info {
+      border-bottom: 2px solid $brand-brown;
+    }
+    .heading {
+      h4 {
+        font-size: 25px;
+      }
+    }
+    .blog-imginfo {
+      min-height: 50px;
+      p {
+        padding: 10px 0 0;
+      }
+    }
+  }
+  .blog-main {
+    min-height: auto;
+    margin: 20px 0;
+  }
+  .askqts {
+    margin: 0;
+  }
+  .section-about {
+    .about-info {
+      margin-bottom: 30px;
+      h3 {
+        margin: 0 0 18px;
+        font-size: 27px;
+      }
+      h5 {
+        font-size: 18px;
+      }
+      p {
+        font-size: 15px;
+        line-height: 22px;
+      }
+    }
+    .about-imgholder {
+      width: 300px;
+      height: 200px;
     }
   }
 }
@@ -959,7 +1109,8 @@
       }
     }
   }
-  .weight-round {
+  .weight-round,
+  .get-round {
     @include square(55px);
     margin-bottom: 10px;
     .lost {
@@ -1013,6 +1164,25 @@
       }
     }
   }
+  .home-slider {
+    .slider-info {
+      h2 {
+        font-size: 15px;
+      }
+      p {
+        margin: 10px 0;
+        font-size: 10px;
+      }
+      button {
+        margin-top: 6px;
+        padding: 8px 10px;
+        font-size: 8px;
+      }
+    }
+    .flexslider .flex-direction-nav a {
+      zoom: 0.6;
+    }
+  }
   .health-heading {
     margin: 0 0 8px;
     font-size: 15px;
@@ -1034,13 +1204,51 @@
       @include square(60px);
     }
   }
+  .section-story {
+    padding: 20px 0;
+    .view-detail {
+      .name {
+        width: 100%;
+        font-size: 17px;
+      }
+      .weight-info {
+        top: 7px;
+      }
+      .descp {
+        font-size: 13px;
+        margin: 30px 0 20px;
+      }
+    }
+  }
   .health-diet {
     .diet-info {
-      h4 { font-size: 18px; }
+      h4 {
+        font-size: 18px;
+      }
       .descp {
         font-size: 15px;
         word-spacing: 0;
       }
+    }
+  }
+  .section-about {
+    .about-info {
+      margin-bottom: 20px;
+      h3 {
+        margin: 0 0 12px;
+        font-size: 22px;
+      }
+      h5 {
+        font-size: 15px;
+      }
+      p {
+        font-size: 14px;
+        line-height: 18px;
+      }
+    }
+    .about-imgholder {
+      width: 250px;
+      height: 150px;
     }
   }
 }
