--- a/views/content/home.html
+++ b/views/content/home.html
@@ -190,12 +190,12 @@
           </div>
           <div class="blog-info">
             <div class="row">
-              <div class="col-md-4">
+              <div class="col-md-4 col-sm-4 ">
                 <div class="blog-imgholder">
                   <img src="img/blog1.png" alt="" class="img-responsive">
                 </div>
               </div>
-              <div class="col-md-8">
+              <div class="col-md-8 col-sm-8 ">
                 <div class="blog-imginfo">
                   <p class="letter-space font-semibold">Anti Ageing Tips</p>
                 </div>
@@ -204,12 +204,12 @@
           </div>
           <div class="blog-info">
             <div class="row">
-              <div class="col-md-4">
+              <div class="col-md-4 col-sm-4 ">
                 <div class="blog-imgholder ">
                   <img src="img/blog2.png" alt="" class="img-responsive">
                 </div>
               </div>
-              <div class="col-md-8">
+              <div class="col-md-8 col-sm-8 ">
                 <div class="blog-imginfo">
                   <p class="letter-space font-semibold">Calcium For All Ages And Genders</p>
                 </div>
@@ -218,12 +218,12 @@
           </div>
           <div class="blog-info">
             <div class="row">
-              <div class="col-md-4">
+              <div class="col-md-4 col-sm-4 ">
                 <div class="blog-imgholder">
                   <img src="img/blog3.png" alt="" class="img-responsive">
                 </div>
               </div>
-              <div class="col-md-8">
+              <div class="col-md-8 col-sm-8">
                 <div class="blog-imginfo last-blog-info">
                   <p class="letter-space font-semibold">Calories In Cocktails</p>
                 </div>
@@ -266,7 +266,7 @@
               </div>
             </div>
             <div class="form-group">
-              <textarea class="form-control" name="" id="" cols="30" rows="10" placeholder="Type your question here..."></textarea>
+              <textarea class="form-control" name="" id="" placeholder="Type your question here..."></textarea>
             </div>
           </form>
           <div class="text-right">
@@ -281,7 +281,7 @@
   <div class="container">
     <div class="aboutus">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 col-sm-6">
           <div class="about-info">
             <h3 class="text-uppercase brand-brown-dark2 font-semibold">About us</h3>
             <h5 class="font-semibold">Only the fit know how fabulous it feels.</h5>
@@ -291,7 +291,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 col-sm-6">
           <div class="about-imgholder m-center">
             <img src="img/suman_priyanka.jpg" alt="" class="img-responsive m-center">
           </div>
