--- a/views/content/productcategory.html
+++ b/views/content/productcategory.html
@@ -13,7 +13,7 @@
   <div class="product-categories">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 col-sm-6 col-xs-6">
           <div class="single-category text-center">
             <div class="category-image round">
               <img src="img/product_category/1.jpg" alt="" class="img-responsive">
@@ -22,7 +22,7 @@
           </div>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-6 col-sm-6 col-xs-6">
           <div class="single-category text-center">
             <div class="category-image round">
               <img src="img/product_category/2.jpg" alt="" class="img-responsive">
@@ -32,7 +32,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 col-sm-6 col-xs-6">
           <div class="single-category text-center">
             <div class="category-image round">
               <img src="img/product_category/3.jpg" alt="" class="img-responsive">
@@ -41,7 +41,7 @@
           </div>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-6 col-sm-6 col-xs-6">
           <div class="single-category text-center">
             <div class="category-image round">
               <img src="img/product_category/4.jpg" alt="" class="img-responsive">
