--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -25,7 +25,7 @@
           </div>
           <div class="checkout-main">
             <div class="row">
-              <div class="col-md-4">
+              <div class="col-md-4 col-sm-6">
                 <form action="">
                   <div class="form-group">
                     <input type="email" class="form-control" placeholder="Email">
