--- a/views/header.html
+++ b/views/header.html
@@ -7,7 +7,7 @@
 
           <div class="row">
             <div class="col-md-1 col-sm-3 col-xs-2">
-              <div class="hamburger">
+              <div class="hamburger" ng-click="toggleMenu();" ng-class="{''}">
                 <span class="brand-primary-bg one"></span>
                 <span class="brand-primary-bg two"></span>
                 <span class="brand-primary-bg three"></span>
