--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -5,8 +5,15 @@
 .hamburger {
   margin-top: 35px;
   cursor: pointer;
+
+  &.green-bar {
+    .brand-primary-bg {
+        background-color: #55b492;
+    }
+  }
   span {
     @include size(25px, 3px);
+    @include transition(all 300ms ease);
     display: block;
     margin-bottom: 5px;
   }
