--- a/views/template.html
+++ b/views/template.html
@@ -1,10 +1,8 @@
-<div ng-controller="headerctrl">
-  <div class="slide-menu" ng-include="template.menu" ng-class="{'slide-in': showMenu == true}"></div>
-  <div class="that-slides" ng-class="{'slide-body': showMenu == true}">
-    <div ng-include="template.header" class="template header"></div>
-    <div ng-include="template.slider" class="template slider"></div>
-    <div ng-include="template.content" class="template content"></div>
-    <div ng-include="template.footermenu" class="template footermenu"></div>
-    <div ng-include="template.footer" class="template footer"></div>
-  </div>
+<div class="slide-menu" ng-include="template.menu"></div>
+<div class="that-slides">
+  <div ng-include="template.header" class="template header"></div>
+  <div ng-include="template.slider" class="template slider"></div>
+  <div ng-include="template.content" class="template content"></div>
+  <div ng-include="template.footermenu" class="template footermenu"></div>
+  <div ng-include="template.footer" class="template footer"></div>
 </div>
