--- a/views/content/home.html
+++ b/views/content/home.html
@@ -18,7 +18,7 @@
     <div class="img-holder get-round">
     </div>
     <div class="pull-right more-abt-suman">
-      <a href="#meet" class="text-uppercase inline-block">More about suman <i class="fa fa-angle-right"></i></a>
+      <a href="#meet" class="text-uppercase inline-block ">More about suman <i class="fa fa-angle-right"></i></a>
     </div>
   </div>
   <div class="health-cat">
@@ -230,7 +230,7 @@
               </div>
             </div>
           </div>
-          <div class="text-right">
+          <div class="text-right btn-center">
             <button class="text-uppercase btn btn-primary" type="button">Read more</button>
           </div>
         </div>
@@ -269,7 +269,7 @@
               <textarea class="form-control" name="" id="" placeholder="Type your question here..."></textarea>
             </div>
           </form>
-          <div class="text-right">
+          <div class="text-right btn-center">
             <button class="text-uppercase btn btn-primary btn-more" type="submit">Submit</button>
           </div>
         </div>
